# webcrawleb

./: .gitignore  Dockerfile  README.md  app.py  build.py  build_windows.py  gitignore  main.py  pyproject.toml  requirements.txt  scrape.py
.devcontainer/: Dockerfile
.github/workflows/: build.yml
api/: index.py
scraped_content/: 20250129_041531_docs.sleeper.com_.md  20250129_042052_journalstar.com_.md  20250129_042240_www.sec.gov_.md
static/: index.html  manifest.json  script.js  styles.css
