[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "url-to-markdown"
version = "1.0.0"
description = "Transform webpages into elegant markdown documents"
authors = [{ name = "Eli Brown", email = "your.email@example.com" }]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "crawl4ai>=0.1.0",
    "pydantic>=2.4.2",
]

[project.scripts]
url-to-markdown = "main:run_app" 